kubernetes/personalsite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ronika-service
  namespace: ronika
spec:
  ports:
    - name: '3000'
      port: 3000
      targetPort: 3000
  selector:
    service: ronika-service
