kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ronika-ingress
  namespace: ronika
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: 'letsencrypt'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  tls:
    - hosts:
        - www.ronika.store
      secretName: tls-secret
  rules:
    - host: www.ronika.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ronika-service
                port:
                  number: 3000
